syntax = "proto3";

// 生產指令：protoc --go_out=. ./proto/user.proto
// 生產指令(包含 grpc)：protoc --go_out=. --go-grpc_out=. ./proto/user.proto
option go_package = "./cmd/user/proto";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
}
